--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
     "start": "dumi dev",
     "build": "dumi build",
     "build:lib": "father-build",
+    "test": "walrus test",
     "release": "walrus release"
   },
   "devDependencies": {
-    "@types/react": "^16.9.46",
+    "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
-    "@walrus/cli": "^1.3.0",
-    "@walrus/plugin-release": "^1.8.1",
+    "@walrus/cli": "^1.3.1",
+    "@walrus/plugin-release": "^1.9.1",
+    "@walrus/plugin-test": "^1.1.0",
     "dumi": "^1.0.34",
-    "father-build": "^1.18.2",
+    "father-build": "^1.18.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.2"
   },
   "publishConfig": {
     "access": "public"
